Fixed Scrollbar popup @ bot of page on screens >18inch

--- a/css/main.css
+++ b/css/main.css
@@ -58,7 +58,7 @@ body {
   -webkit-align-items: flex-end;
   position: fixed;
   bottom: 0; left: 0; right: 0;
-  overflow-x: scroll;
+  overflow-x: visible;
   overflow-y: visible;
   padding-top: 1em;
 }
